Dark Mode issue figured out
I found out why Dark Mode wasn't working for me: prefers-color-scheme checks if your computer is in dark mode, not if Chrome is.

--- a/client/src/components/Styles/styles.css
+++ b/client/src/components/Styles/styles.css
@@ -3419,7 +3419,7 @@ Dark mode style rules
 \/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\//\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\
 */
 
-/* .page#home {
+.page#home {
     background-color: white;
     color: black;
 }
@@ -3429,16 +3429,18 @@ Dark mode style rules
         background-color: #414141;
         color: white;
     }
-} */
+}
 
-.scrollable-stuff#theme-light .carousel-card {
+.scrollable-stuff .carousel-card {
     background-color: white;
     color: black;
 }
 
-.scrollable-stuff#theme-dark .carousel-card {
-    background-color: #414141;
-    color: white;
+@media (prefers-color-scheme: dark) {
+    .scrollable-stuff .carousel-card {
+        background-color: #414141;
+        color: white;
+    }
 }
 
 /*
